<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/worked_hour"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/worked_hour"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/hourly_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hourly_rate"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:hint="@string/hourly_rate"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="26dp"
        android:text="@string/empty"
        app:layout_constraintStart_toEndOf="@+id/desc_total"
        app:layout_constraintTop_toBottomOf="@+id/calc_button" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:text="@string/empty"
        app:layout_constraintStart_toEndOf="@+id/desc_tax"
        app:layout_constraintTop_toBottomOf="@+id/total_payment" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="26dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@+id/desc_total"
        app:layout_constraintTop_toBottomOf="@+id/hourly_rate" />

    <TextView
        android:id="@+id/desc_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/desc_total"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_payment"
        app:layout_constraintStart_toStartOf="@+id/hourly_rate" />

    <TextView
        android:id="@+id/desc_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_tax"
        app:layout_constraintBaseline_toBaselineOf="@+id/tax"
        app:layout_constraintEnd_toEndOf="@+id/desc_total" />

</androidx.constraintlayout.widget.ConstraintLayout>